MDL-45031 theme: fix tabs base line alignment by 1px.
Credit goes to Damyon Wiese, thanks!

--- a/theme/base/style/tabs.css
+++ b/theme/base/style/tabs.css
@@ -46,7 +46,7 @@
     padding: 0;
     position: absolute;
     width: 100%;
-    bottom: -4px;
+    bottom: -5px;
 }
 .tabtree .tabrow0 .tabrow1 {
     padding: 5px 0 2px;
